perf: cut repeat-render cost and make attribute order deterministic
Memoize the analyze walk for the last (document, context) pair so the
parse-once/render-many flow pays for the tree walk once, index attachments
by normalized file id per render instead of scanning per media node, and
apply text marks directly instead of composing per-node Function chains.

Keep document order in Attributes/MacroParams (Map.copyOf salts iteration
order per JVM run), prefer the curated extension map over URLConnection's
environment-dependent MIME guess, share one firstNonBlank helper, and drop
small dead code (blank re-check, defensive IdentityHashMap copy, mapObjects
pass-through, null-laundering ternaries before extension-key switches).

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MVLfJMiEXdYey9fue351WN